remove cleanup of events logic from instances measurements